# Fractals3D-OpenGL

./: .gitmodules  CMakeLists.txt  README.md
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
shaders/: fragment.frag  main.frag  vertex.vert
src/: application.cpp  application.hpp
src/camera/: camera.cpp  camera.hpp
src/shader/: shader.cpp  shader.hpp
src/window/: input.hpp  window.cpp  window.hpp
